Fixed Banner on Mobile Devices
- Fixed the layout of the banner image and header on mobile devices.

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -64,7 +64,9 @@
 	}
 
 	@media (max-width: 60em) {
-		h2 { clear: both; padding-top: 3%; margin: 0 2% 0 2%; }
+		h2 { clear: both; padding-top: 3%; text-align: center; }
+		p { text-align: center; }
+		img { float: none; width: 100%; }
 	}
 
 	img {
